--- a/test.html
+++ b/test.html
@@ -3,8 +3,11 @@
 	<head>
 		<meta charset="utf-8">
 		<title>test</title>
+		<link rel="stylesheet" href="test.css" />
+		<script src="test.js"></script>
+		
 	</head>
 	<body>
-		这是测试代码
+		<div id="test">这是测试代码</div>
 	</body>
 </html>
